# mpl-core-staking-example

./: README.md
anchor/: .gitignore  Anchor.toml  package-lock.json  package.json
anchor/programs/core-rust-staking-example/: Cargo.toml
anchor/programs/core-rust-staking-example/src/: lib.rs
anchor/tests/: core-rust-staking-example.ts
typescript/: .gitignore  README.md  package-lock.json  package.json
typescript/assets/: addAsset.ts  assetMetadata.ts  createCollection.ts  mintAsset.ts  uploadImage.ts
typescript/stake/: readAttributeData.ts  stake.ts  unstake.ts
